# NTMDTRead

./: .gitlab-ci.yml  pyproject.toml  setup.cfg
NTMDTRead/: NDimData.py  NTMDTReader.py  colors.py  kaitaiParseBase.py
NTMDTRead/kaitai/: nt_mdt.py
NTMDTRead/palettes/: __init__.py
NTMDTRead/utils/: softwarePaths.py
examples/: matplotlibColorMapConvert.py
