[metadata]
name = NTMDTRead
version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/NTMDTRead
description = A set of tools to read NT-MDT files.
long_description = file: ReadMe.md
keywords = nt-mdt, AFM, SPM, probe, microscopy, mdt, palette
license = Unlicense or GPLv3 depending on module
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	License :: OSI Approved :: GNU General Public License (GPL)
	Operating System :: OS Independent

[options]
zip_safe = True
packages = NTMDTRead, NTMDTRead.palettes
include_package_data = True

setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3; kaitaiStructCompile.setuptools[toml] @ git+https://gitlab.com/KOLANICH/kaitaiStructCompile.setuptools.git
#test_suite = tests.tests.Tests
install_requires =
	kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git#egg=kaitaistruct
	numpy
	matplotlib
	pint @ git+https://github.com/hgrecco/pint.git#egg=pint
	configobj
	beautifulsoup4
	lxml
	lazy_object_proxy